RMA-1 Changed git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ src/Germadent.Rma.App/Germadent.Rma.App/obj/Debug/App.g.cs
 src/Germadent.Rma.App/Germadent.Rma.App/obj/Debug/App.g.i.cs
 src/Germadent.Rma.App/Germadent.Rma.App/obj/
 src/Germadent.Rma.App/Germadent.Rma.App/bin/
+src/_ReSharper.Caches/
