--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -64,6 +64,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Views\DesignMock\DesignMockMainViewModel.cs" />
+    <Compile Include="Views\WindowManager.cs" />
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -72,7 +74,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Model\IRmaOperations.cs" />
+    <Compile Include="Mocks\MockRmaAuthorizer.cs" />
+    <Compile Include="Mocks\MockRmaOperations.cs" />
     <Compile Include="ViewModels\AuthorizationViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
@@ -111,6 +114,10 @@
     <ProjectReference Include="..\..\Germadent.Common\Germadent.Common.csproj">
       <Project>{A73F2837-286E-4DF2-95A7-6A383B67A66B}</Project>
       <Name>Germadent.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Germadent.ServiceClient\Germadent.ServiceClient.csproj">
+      <Project>{20C51207-C072-4C58-B653-5BC624B00CC3}</Project>
+      <Name>Germadent.ServiceClient</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Germadent.UI\Germadent.UI.csproj">
       <Project>{E3944E28-D2B6-471B-ACC7-316315C602A1}</Project>
