--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -64,13 +64,23 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\IMillingOrderViewModel.cs" />
     <Compile Include="ViewModels\MaterialViewModel.cs" />
-    <Compile Include="ViewModels\ILabOrderViewModel.cs" />
+    <Compile Include="ViewModels\IOrderViewModel.cs" />
     <Compile Include="ViewModels\LabOrderViewModel.cs" />
+    <Compile Include="ViewModels\MillingCenterOrderViewModel.cs" />
+    <Compile Include="ViewModels\TeethViewModel.cs" />
     <Compile Include="Views\DesignMock\DesignMockLabOrderViewModel.cs" />
     <Compile Include="Views\DesignMock\DesignMockMainViewModel.cs" />
+    <Compile Include="Views\DesignMock\DesignMockMillingCenterOrderViewModel.cs" />
     <Compile Include="Views\LabOrderWindow.xaml.cs">
       <DependentUpon>LabOrderWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MillingCenterOrderWindow.xaml.cs">
+      <DependentUpon>MillingCenterOrderWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\MouthUserControl.xaml.cs">
+      <DependentUpon>MouthUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\WindowManager.cs" />
     <Page Include="Views\LabOrderWindow.xaml">
@@ -93,6 +103,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\MillingCenterOrderWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\MouthUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
