RMA-1 Gitignore fix

--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,11 @@ src/Germadent.Rma.App/Germadent.Rma.App/obj/
 src/Germadent.Rma.App/Germadent.Rma.App/bin/
 src/_ReSharper.Caches/
 src/Germadent.Common/bin/
+src/Germadent.Common/obj/
 src/Germadent.UI/bin/
 src/Germadent.UI/obj/
-src/Germadent.Common/obj/
 src/packages/
 src/Germadent.ServiceClient/obj/
 src/Germadent.ServiceClient/bin/
+src/Germadent.Rma.Model/obj/
+src/Germadent.Rma.Model/bin/
