--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -155,9 +155,9 @@
       <Project>{A73F2837-286E-4DF2-95A7-6A383B67A66B}</Project>
       <Name>Germadent.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Germadent.ServiceClient\Germadent.ServiceClient.csproj">
+    <ProjectReference Include="..\..\Germadent.Rma.Model\Germadent.Rma.Model.csproj">
       <Project>{20C51207-C072-4C58-B653-5BC624B00CC3}</Project>
-      <Name>Germadent.ServiceClient</Name>
+      <Name>Germadent.Rma.Model</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Germadent.UI\Germadent.UI.csproj">
       <Project>{E3944E28-D2B6-471B-ACC7-316315C602A1}</Project>
