--- a/src/Germadent.Rma.Model/Germadent.Rma.Model.csproj
+++ b/src/Germadent.Rma.Model/Germadent.Rma.Model.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{20C51207-C072-4C58-B653-5BC624B00CC3}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Germadent.ServiceClient</RootNamespace>
-    <AssemblyName>Germadent.ServiceClient</AssemblyName>
+    <RootNamespace>Germadent.Rma.Model</RootNamespace>
+    <AssemblyName>Germadent.Rma.Model</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -36,12 +36,12 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Model\Enums.cs" />
-    <Compile Include="Model\Material.cs" />
-    <Compile Include="Model\Order.cs" />
-    <Compile Include="Model\OrdersFilter.cs" />
+    <Compile Include="Enums.cs" />
+    <Compile Include="Material.cs" />
     <Compile Include="Operation\IRmaAuthorizer.cs" />
     <Compile Include="Operation\IRmaOperations.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="OrdersFilter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Germadent.Common\Germadent.Common.csproj">
