--- a/src/Germadent.Rma.App/Germadent.Rma.App/App.config
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/App.config
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
+  </startup>
+  <appSettings>
+
+    <!-- Адрес сервиса для работы с данными -->
+    <add key="DataServiceUrl" value="http://localhost:4444" />
+
+    <!--Режим работы (Mock - тестовые данные, Server - сервер )-->
+    <add key="WorkMode" value="Server" />
+  </appSettings>
 </configuration>
