--- a/src/Germadent.Rma.App/Germadent.Rma.App/App.config
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/App.config
@@ -9,6 +9,6 @@
     <add key="DataServiceUrl" value="http://localhost:4444" />
 
     <!--Режим работы (Mock - тестовые данные, Server - сервер )-->
-    <add key="WorkMode" value="Server" />
+    <add key="WorkMode" value="Mock" />
   </appSettings>
 </configuration>
