--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ src/Germadent.Rma.Model/obj/
 src/Germadent.DataAccessService/bin/
 src/Germadent.DataAccessService/obj/
 db/Germadent/.vs/
+db/Germadent/Germadent.DB/obj/
+db/Germadent/Germadent.DB/bin/
