--- a/src/Germadent.Rma.Model/Germadent.Rma.Model.csproj
+++ b/src/Germadent.Rma.Model/Germadent.Rma.Model.csproj
@@ -40,6 +40,7 @@
     <Compile Include="FilterExtensions.cs" />
     <Compile Include="Material.cs" />
     <Compile Include="Order.cs" />
+    <Compile Include="OrderLite.cs" />
     <Compile Include="OrdersFilter.cs" />
   </ItemGroup>
   <ItemGroup>
