--- a/src/Germadent.DataAccessService/App.config
+++ b/src/Germadent.DataAccessService/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
+  <appSettings>
+    <!-- Адрес сервиса для работы с данными -->
+    <add key="Url" value="http://localhost:4444" />
+  </appSettings>
 </configuration>
