--- a/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
+++ b/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
@@ -55,6 +55,7 @@
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -64,14 +65,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\IServiceConfiguration.cs" />
+    <Compile Include="Entities\Conversion\EntityToDtoConverter.cs" />
     <Compile Include="Entities\MaterialEntity.cs" />
+    <Compile Include="Entities\OrderEntity.cs" />
     <Compile Include="Entities\OrderLiteEntity.cs" />
-    <Compile Include="IEntityToDtoConverter.cs" />
-    <Compile Include="IRmaRepository.cs" />
+    <Compile Include="Entities\Conversion\IEntityToDtoConverter.cs" />
+    <Compile Include="Repository\IRmaRepository.cs" />
     <Compile Include="OrdersModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RmaRepository.cs" />
+    <Compile Include="Repository\RmaRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
