--- a/src/Germadent.DataAccessService/App.config
+++ b/src/Germadent.DataAccessService/App.config
@@ -6,5 +6,8 @@
   <appSettings>
     <!-- Адрес сервиса для работы с данными -->
     <add key="Url" value="http://localhost:4444" />
+
+    <!--Строка подключения к БД-->
+    <add key="ConnectionString" value="Data Source=.\GAMEOVERSQL;Initial Catalog=Germadent;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </appSettings>
 </configuration>
