Заполнение формы заказ наряда для лаборатории

--- a/src/Germadent.Common/Germadent.Common.csproj
+++ b/src/Germadent.Common/Germadent.Common.csproj
@@ -37,6 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Extensions\JsonExtensions.cs" />
+    <Compile Include="Extensions\ObjectExtension.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\TextExtensions.cs" />
     <Compile Include="Extensions\ThreadTaskExtensions.cs" />
