Начал добавлять добавлялку заказнарядов

--- a/src/Germadent.DataAccessService/App.config
+++ b/src/Germadent.DataAccessService/App.config
@@ -8,6 +8,6 @@
     <add key="Url" value="http://localhost:4444" />
 
     <!--Строка подключения к БД-->
-    <add key="ConnectionString" value="Data Source=89.189.186.48;Initial Catalog=Germadent;Integrated Security=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;User WorkOrderId=sa; Password=asza" />
+    <add key="ConnectionString" value="Data Source=89.189.186.48;Initial Catalog=Germadent;Integrated Security=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;User Id=sa; Password=asza" />
   </appSettings>
 </configuration>
