--- a/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
+++ b/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
@@ -42,14 +42,14 @@
     <Reference Include="Microsoft.Practices.Unity.Configuration, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.2.1.505.0\lib\NET35\Microsoft.Practices.Unity.Configuration.dll</HintPath>
     </Reference>
-    <Reference Include="Nancy, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Nancy.2.0.0\lib\net452\Nancy.dll</HintPath>
+    <Reference Include="Nancy, Version=1.4.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Nancy.1.4.3\lib\net40\Nancy.dll</HintPath>
     </Reference>
     <Reference Include="Nancy.Bootstrappers.Unity, Version=1.4.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Nancy.Bootstrappers.Unity.1.4.1\lib\net40\Nancy.Bootstrappers.Unity.dll</HintPath>
     </Reference>
-    <Reference Include="Nancy.Hosting.Self, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Nancy.Hosting.Self.2.0.0\lib\net452\Nancy.Hosting.Self.dll</HintPath>
+    <Reference Include="Nancy.Hosting.Self, Version=1.4.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Nancy.Hosting.Self.1.4.1\lib\net40\Nancy.Hosting.Self.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\IServiceConfiguration.cs" />
+    <Compile Include="Configuration\ServiceConfiguration.cs" />
     <Compile Include="Entities\Conversion\EntityToDtoConverter.cs" />
     <Compile Include="Entities\MaterialEntity.cs" />
     <Compile Include="Entities\OrderEntity.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Entities\OrderEntity.MillingCenter.cs" />
     <Compile Include="Entities\OrderLiteEntity.cs" />
     <Compile Include="Entities\Conversion\IEntityToDtoConverter.cs" />
+    <Compile Include="DataAccessServiceBootstrapper.cs" />
     <Compile Include="Repository\IRmaRepository.cs" />
     <Compile Include="OrdersModule.cs" />
     <Compile Include="Program.cs" />
