--- a/src/Germadent.DataAccessService/packages.config
+++ b/src/Germadent.DataAccessService/packages.config
@@ -5,5 +5,6 @@
   <package id="Nancy.Bootstrappers.Unity" version="1.4.1" targetFramework="net462" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
+  <package id="Topshelf" version="4.2.1" targetFramework="net462" />
   <package id="Unity" version="2.1.505.0" targetFramework="net462" />
 </packages>
