--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ db/Germadent/Germadent.DB/bin/
 src/Germadent.Rma.Model.Test/obj/
 src/Germadent.Rma.Model.Test/bin/
 src/.vs/
+src/.idea/.idea.Germadent/.idea/
+src/.idea/
