--- a/src/Germadent.Rma.Model/Germadent.Rma.Model.csproj
+++ b/src/Germadent.Rma.Model/Germadent.Rma.Model.csproj
@@ -42,6 +42,8 @@
     <Compile Include="OrderDtoExtenisons.cs" />
     <Compile Include="OrderLiteDto.cs" />
     <Compile Include="OrdersFilter.cs" />
+    <Compile Include="ToothCardDto.cs" />
+    <Compile Include="ToothDto.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Germadent.Common\Germadent.Common.csproj">
