--- a/src/Germadent.Rma.App.Test/Germadent.Rma.App.Test.csproj
+++ b/src/Germadent.Rma.App.Test/Germadent.Rma.App.Test.csproj
@@ -34,11 +34,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentAssertions, Version=5.10.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentAssertions.5.10.0\lib\net45\FluentAssertions.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -61,6 +68,10 @@
     <ProjectReference Include="..\Germadent.Rma.Model\Germadent.Rma.Model.csproj">
       <Project>{20C51207-C072-4C58-B653-5BC624B00CC3}</Project>
       <Name>Germadent.Rma.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Germadent.UI\Germadent.UI.csproj">
+      <Project>{E3944E28-D2B6-471B-ACC7-316315C602A1}</Project>
+      <Name>Germadent.UI</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
