--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -99,9 +99,9 @@
     <Compile Include="ViewModels\IOrderViewModel.cs" />
     <Compile Include="ViewModels\OrderLightViewModel.cs" />
     <Compile Include="ViewModels\OrdersFilterViewModel.cs" />
-    <Compile Include="ViewModels\ProstheticsTypeViewModel.cs" />
-    <Compile Include="ViewModels\ToothViewModel.cs" />
-    <Compile Include="ViewModels\Wizard\IToothCardViewModel.cs" />
+    <Compile Include="ViewModels\ToothCard\ProstheticsTypeViewModel.cs" />
+    <Compile Include="ViewModels\ToothCard\ToothViewModel.cs" />
+    <Compile Include="ViewModels\ToothCard\IToothCardViewModel.cs" />
     <Compile Include="ViewModels\Wizard\IWizardStepsProvider.cs" />
     <Compile Include="ViewModels\Wizard\IWizardStepViewModel.cs" />
     <Compile Include="ViewModels\Wizard\LaboratoryInfoWizardStepViewModel.cs" />
@@ -110,7 +110,7 @@
     <Compile Include="ViewModels\Wizard\MillingCenterInfoWizardStepViewModel.cs" />
     <Compile Include="ViewModels\Wizard\MillingCenterProjectWizardStepViewModel.cs" />
     <Compile Include="ViewModels\Wizard\MillingCenterWizardStepsProvider.cs" />
-    <Compile Include="ViewModels\Wizard\ToothCardViewModel.cs" />
+    <Compile Include="ViewModels\ToothCard\ToothCardViewModel.cs" />
     <Compile Include="ViewModels\Wizard\WizardStepViewModelBase.cs" />
     <Compile Include="ViewModels\Wizard\WizardViewModel.cs" />
     <Compile Include="Views\DesignMock\DesignMockDialogAgent.cs" />
@@ -155,8 +155,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Mocks\MockRmaAuthorizer.cs" />
-    <Compile Include="Mocks\MockRmaOperations.cs" />
+    <Compile Include="Mocks\DesignMockRmaAuthorizer.cs" />
+    <Compile Include="Mocks\DesignMockRmaOperations.cs" />
     <Compile Include="ViewModels\AuthorizationViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
