--- a/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
+++ b/src/Germadent.DataAccessService/Germadent.DataAccessService.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Entities\OrderLiteEntity.cs" />
     <Compile Include="Entities\Conversion\IEntityToDtoConverter.cs" />
     <Compile Include="DataAccessServiceBootstrapper.cs" />
+    <Compile Include="Entities\ProstheticConditionEntity.cs" />
     <Compile Include="Entities\ProstheticTypeEntity.cs" />
     <Compile Include="Entities\ToothEntity.cs" />
     <Compile Include="Infrastructure\NancyService.cs" />
